# Learn-Marathi-Alexa-Skill-POC

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/endpoints/: health.py  rag.py  search.py  translate.py
app/core/: config.py
app/db/: database.py
app/models/: schemas.py
app/services/: embedding_service.py  rag_service.py  search_service.py  translation_service.py
lambda/: AlexaSkillLambda.py
scripts/: pdf_to_vector.py  rag_query_system.py
